--- a/src/Component/Dashboard/Sidebar/Sidebar.css
+++ b/src/Component/Dashboard/Sidebar/Sidebar.css
@@ -2,9 +2,9 @@
 .sidebar {
     margin: 0;
     padding: 0;
-    width: 330px;
+    /* width: 330px; */
     background-color: #f1f1f1;
-    position: fixed;
+    /* position: fixed; */
     height: 100%;
     overflow: auto;
     background-image: linear-gradient(to right, rgb(255, 239, 186), rgb(255, 255, 255));
@@ -32,13 +32,13 @@
   }
   
   div.content {
-    margin-left: 330px;
-    padding: 1px 16px;
-    height: 1000px;
+    /* margin-left: 330px; */
+    /* padding: 1px 16px; */
+    /* height: 1000px; */
   }
   @media screen and (max-width: 700px) {
     .sidebar {
-      width: 100%;
+      /* width: 100%; */
       height: auto;
       position: relative;
     }
